@startuml
title UML Class Diagram
skinparam classAttributeIconSize 0

package ringbuffer {

  class Main {
    + main(args: String[]) : void
  }

  class Writer {
    - buffer : RingBuffer<Integer>
    - delayMs : long
    - counter : long
    + Writer(buffer: RingBuffer<Integer>, delayMs: long)
    + run() : void
  }

  class RingBuffer<T> {
    - buffer : Object[]
    + capacity : int
    + lock : Object
    - writeSequence : long
    - readers : List<Reader<T>>
    + RingBuffer(capacity: int)
    + write(item: T) : void
    + createReader() : Reader<T>
    ..read helpers..
    + writeSeqUnsafe() : long
    + oldestAvailableSeqUnsafe() : long
    + getAtSeqUnsafe(sequence: long) : T
    + debugRing() : String
  }

  class Reader<T> {
    - buffer : RingBuffer<T>
    - name : String
    - delayMs : long
    - nextSeqToRead : long
    + Reader(buffer: RingBuffer<T>, startSeq: long, name: String, delayMs: long)
    + read() : Optional<T>
    + position() : long
    + ringIndex() : int
    + run() : void
  }

  enum ReaderStart {
    FROM_NOW
    FROM_OLDEST_AVAILABLE
  }

  Main ..> RingBuffer : creates
  Main ..> Writer : starts
  RingBuffer ..> Reader : creates
  Writer --> RingBuffer : writes
  Reader --> RingBuffer : reads
}

@enduml
